# gputemplates

./: .gitignore  expr-templates.cpp
gpu/cuda_runtime_api/: CMakeLists.txt  ERROR_LOGS.txt  README.md  Timer.h  cudaproto.cpp  exprtemplates.h  review-fun-exprtemplates.h  scratch-stencilexprtemplates.cu  stencil1D.cu  stencil1D.ptx  stencil2D.cu  stencil2D.ptx  stencilcpp.cu  stencilexprtemplates.cu  stencilproto.cu  stenciltemplate.cu
gpu/reference/: proto1.cpp
